# PointCloud_Linux

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CommonTools/: CMakeLists.txt
CommonTools/Data/: Any.cpp  BnsWrapper.cpp  ModelNode.cpp  ReferenceCountObj.cpp
CommonTools/Log/: Log.cpp
CommonTools/Tool/: CriticalSection.cpp  CriticalSection.h  FileToolkit.cpp  FileToolkit.h  LibToolkit.cpp  LibToolkit.h  ModelNodeHelper.cpp  ModelNodeHelper.h  TBBParallel.cpp  TBBParallel.h  XmlDocument.cpp  XmlDocument.h
CommonTools/cstring/: StringToolkit.cpp  cstring.cpp  fixalloc.cpp  fixalloc.h  plex.h  ptmutexlock.h
CommonTools/include/: Any.h  BnsWrapper.h  CommonToolsDef.h  CommonToolsExport.h  Log.h  ModelNode.h  ReferenceCountObj.h  Singleton.h  StringToolkit.h  cstring.h  ptspinlock.h  share_ptr.h
PointCloudAppStarter/: CMakeLists.txt  main.cpp
PointCloudManager/: CMakeLists.txt  stdafx.h
PointCloudManager/BusinessNode/: BnsPointCloudNode.cpp  BnsPointCloudNode.h  BnsProjectNode.cpp  BnsProjectNode.h  PCNodeType.h
PointCloudManager/Cluster/: ClusterItem.cpp  ClusterManager.cpp  ClusterManagerSet.cpp
PointCloudManager/LasFile/: ExportLasTool.cpp  ExportLasTool.h  IPageLodAcceptHandler.h  LasFileToolkit.cpp  LasFileToolkit.h  OsgDefines.h  PointCloudDistanceMeasure.cpp  PointCloudPageLod.cpp  PointCloudPageLod.h  PointCloudPropertyTool.cpp  PointCloudPropertyTool.h  PointCloudTool.cpp  PointCloudTool.h  PointCloudToolDefine.h  PointCloudToolKit.cpp  PointCloudToolkit.h  PointProcessThread.cpp  PointProcessThread.h  SamplesOnOffGeometry.cpp  SamplesOnOffGeometry.h
PointCloudManager/ProjectManager/: ClusterFileLoader.cpp  ClusterFileLoader.h  ProjectManagerTool.cpp  ProjectManagerTool.h
PointCloudManager/Segment/: AutoSegmentFileLoadSaveThread.cpp  AutoSegmentFileLoadSaveThread.h  DataManager.cpp  DataManager.h  PCAlgorithmToolkit.cpp  PCAlgorithmToolkit.h  PCAutoSegmentToolkit.cpp  PCAutoSegmentToolkit.h  PCQueryWrapperToolkit.cpp  PCQueryWrapperToolkit.h  PagedLodPointsVisitor.cpp  PagedLodPointsVisitor.h  PointCloudBoxQuery.cpp  PointCloudBoxQuery.h  PointCloudManagerDef.h  PointCloudManagerDefine.h  PointCloudPropertyVisitor.cpp  PointCloudPropertyVisitor.h  PropertyVisitorCommand.cpp  PropertyVisitorCommand.h
PointCloudManager/Tool/: SpatialRef.cpp
PointCloudManager/include/: ClusterItem.h  ClusterManager.h  ClusterManagerSet.h  PointCloudDistanceMeasure.h  PointCloudManagerExport.h  PointCloudManagerRefs.h  SpatialRef.h  include.h
PointCloudSegmentation/: CMakeLists.txt  stdafx.h
PointCloudSegmentation/include/: ClassificationDef.h  Export.h  ICloudSegmentation.h  IGeoProjectionConvertor.h  IImageRecognition.h  IImageRecognitionService.h  PointCloudSegAPI.h  PointCloudSegStruct.h
PointCloudSegmentation/src/: Platform.cpp  Platform.h  PointCloudSegAPI.cpp
PointCloudSegmentation/src/7z/: 7z.cpp  7z.h
PointCloudSegmentation/src/algorithm/: anderson_acceleration.h  approximate_pmf.cpp  approximate_pmf.h  approximate_pmf.hpp  boundingbox2d.h  delanuator.cpp  delanuator.h  gdal_band.cpp  gdal_raster.cpp  gdal_raster.h  gdal_types.h  geometry2d_op.cpp  geometry2d_op.h  hash.h  icp.h  icp_fast_robust.h  lsd.cpp  lsd.h  math.cpp  math.h  mesh.h  nonelinear_least_squares.cpp  nonelinear_least_squares.h  ransac_line_model.cpp  ransac_line_model.h  raster.cpp  raster.h  registration.cpp  registration.h  vcgmesh.cpp  vcgmesh.h  voxel_grid_filter.h
PointCloudSegmentation/src/core/: api.h  pointTypes.h  pointTypes.hpp  pointTypes.inl
PointCloudSegmentation/src/core/deeplearning/: data_process.cpp  data_process.h  inference.cpp  inference.h  preprocess_op.cpp  preprocess_op.h
PointCloudSegmentation/src/core/private/: apiImpl.cpp  cloudProcess.cpp  cloudProcess.h  filters.cpp  filters.h  gdalProcess.cpp  gdalProcess.h  meshProcess.cpp  meshProcess.h  rasterProcess.cpp  rasterProcess.h  simpleMesh.cpp  simpleMesh.h  spatials.cpp  spatials.h  statistics.cpp  statistics.h
PointCloudSegmentation/src/d3/: Log.cpp  Log.h  Singleton.h
PointCloudSegmentation/src/io/: geoProjectionConverter.cpp  geoProjectionConverter.h  pointCloudReader.cpp  pointCloudReader.h  pointCloudToLod.cpp  pointCloudToLod.h  pointCloudWriter.cpp  pointCloudWriter.h  rasterWriter.cpp  rasterWriter.h  tileToLod.cpp  tileToLod.h
PointCloudSegmentation/src/plot/: geomCreator.cpp  geomCreator.h  plotHandle.cpp  plotHandle.h
PointCloudSegmentation/src/reconstruct/: pylonDecompose.cpp  pylonDecompose.h  pylonMatching.cpp  pylonMatching.h  pylonReconstruct.cpp  pylonReconstruct.h
PointCloudSegmentation/src/segmentation/: buildingExtraction.cpp  buildingExtraction.h  cropClassify.cpp  cropClassify.h  dangerSegmentation.cpp  dangerSegmentation.h  enviromentClassify.cpp  enviromentClassify.h  gridCell.cpp  gridCell.h  powerCorridorsClassify.cpp  powerCorridorsClassify.h  powerlineCurve.cpp  powerlineCurve.h  pylonCommon.cpp  pylonCommon.h  pylonLocation.cpp  pylonLocation.h  treeSegmentation.cpp  treeSegmentation.h  treeSpeciesIdentification.cpp  treeSpeciesIdentification.h
PointCloudSegmentation/src/segmentation/improve/: attachmentClassifier.cpp  attachmentClassifier.h  poleClassifier.cpp  poleClassifier.h  powerlineClassifier.cpp  powerlineClassifier.h  pylonClassifier.cpp  pylonClassifier.h  pylonRefinement.cpp  pylonRefinement.h  roadClassifier.cpp  roadClassifier.h  wireClassifier.cpp  wireClassifier.h
PointCloudSegmentation/src/service/: CloudSegmentation.cpp  CloudSegmentation.h  GeoProjectionConvertor.cpp  GeoProjectionConvertor.h  Options.cpp  Options.h  PointCloud.cpp  PointCloud.h  Recognition.cpp  Recognition.h  Segmentation.cpp  Segmentation.h  ValueBuffer.cpp  ValueBuffer.h
PointCloudSegmentation/src/utils/: endian.h  logging.cpp  logging.h  misc.cpp  misc.h  stringutil.cpp  stringutil.h  threading.cpp  threading.h  timer.cpp  timer.h
cmake/: config.cmake  toolchain.cmake
